--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.thymeleaf.cache=false
 spring.profiles.active=dev
 
 default.to.address=onlinecarren@gmail.com
+token.expiration.length.minutes=120
